--- a/Paper/literature.bib
+++ b/Paper/literature.bib
@@ -132,3 +132,342 @@ at the end of the file.
   pages     = {1087--1097},
   year      = {1989}
 }
+
+@inproceedings{BloemKS14,
+	author    = {Roderick Bloem and
+	Robert K{\"{o}}nighofer and
+	Martina Seidl},
+	editor    = {Kenneth L. McMillan and
+	Xavier Rival},
+	title     = {SAT-Based Synthesis Methods for Safety Specs},
+	booktitle = {Verification, Model Checking, and Abstract Interpretation - 15th International
+	Conference, {VMCAI} 2014, San Diego, CA, USA, January 19-21, 2014,
+	Proceedings},
+	series    = {Lecture Notes in Computer Science},
+	volume    = {8318},
+	pages     = {1--20},
+	publisher = {Springer},
+	year      = {2014},
+}
+
+
+@inproceedings{MillerSB13,
+	author    = {Christian Miller and
+	Christoph Scholl and
+	Bernd Becker},
+	title     = {Proving QBF-hardness in Bounded Model Checking for Incomplete Designs},
+	booktitle = {14th International Workshop on Microprocessor Test and Verification,
+	{MTV} 2013, Austin, TX, USA, December 11-13, 2013},
+	pages     = {23--28},
+	publisher = {{IEEE} Computer Society},
+	year      = {2013},
+	url       = {https://doi.org/10.1109/MTV.2013.11},
+	doi       = {10.1109/MTV.2013.11},
+	timestamp = {Sun, 21 May 2017 00:17:02 +0200},
+	biburl    = {https://dblp.org/rec/bib/conf/mtv/MillerSB13},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{EglyKLP17,
+	author    = {Uwe Egly and
+	Martin Kronegger and
+	Florian Lonsing and
+	Andreas Pfandler},
+	title     = {Conformant planning as a case study of incremental {QBF} solving},
+	journal   = {Ann. Math. Artif. Intell.},
+	volume    = {80},
+	number    = {1},
+	pages     = {21--45},
+	year      = {2017},
+	url       = {https://doi.org/10.1007/s10472-016-9501-2},
+	doi       = {10.1007/s10472-016-9501-2},
+	timestamp = {Thu, 04 May 2017 17:53:30 +0200},
+	biburl    = {https://dblp.org/rec/bib/journals/amai/EglyKLP17},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{StockmeyerM73,
+	author    = {Larry J. Stockmeyer and
+	Albert R. Meyer},
+	title     = {Word Problems Requiring Exponential Time: Preliminary Report},
+	booktitle = {{STOC}},
+	pages     = {1--9},
+	publisher = {{ACM}},
+	year      = {1973}
+}
+
+@inproceedings{Cook71,
+	author    = {Stephen A. Cook},
+	title     = {The Complexity of Theorem-Proving Procedures},
+	booktitle = {{STOC}},
+	pages     = {151--158},
+	publisher = {{ACM}},
+	year      = {1971}
+}
+
+@misc{Balabanov2015,
+	title={Skolem functions computation for CEGAR based QBF solvers},
+	author={Balabanov, Valeriy and Jiang, JR and Scholl, Christoph},
+	year={2015},
+	publisher={QBF}
+}
+
+@inproceedings{RabeS16,
+	author    = {Markus N. Rabe and
+	Sanjit A. Seshia},
+	title     = {Incremental Determinization},
+	booktitle = {{SAT}},
+	series    = {Lecture Notes in Computer Science},
+	volume    = {9710},
+	pages     = {375--392},
+	publisher = {Springer},
+	year      = {2016}
+}
+
+@article{BalabanovJ12,
+	author    = {Valeriy Balabanov and
+	Jie{-}Hong R. Jiang},
+	title     = {Unified {QBF} certification and its applications},
+	journal   = {Formal Methods Syst. Des.},
+	volume    = {41},
+	number    = {1},
+	pages     = {45--65},
+	year      = {2012}
+}
+
+@inproceedings{Benedetti05,
+	author    = {Marco Benedetti},
+	title     = {Extracting Certificates from Quantified Boolean Formulas},
+	booktitle = {{IJCAI}},
+	pages     = {47--53},
+	publisher = {Professional Book Center},
+	year      = {2005}
+}
+
+@article{NarizzanoPPT09,
+	author    = {Massimo Narizzano and
+	Claudia Peschiera and
+	Luca Pulina and
+	Armando Tacchella},
+	title     = {Evaluating and certifying QBFs: {A} comparison of state-of-the-art
+	tools},
+	journal   = {{AI} Commun.},
+	volume    = {22},
+	number    = {4},
+	pages     = {191--210},
+	year      = {2009}
+}
+
+@inproceedings{NiemetzPLSB12,
+	author    = {Aina Niemetz and
+	Mathias Preiner and
+	Florian Lonsing and
+	Martina Seidl and
+	Armin Biere},
+	title     = {Resolution-Based Certificate Extraction for {QBF} - (Tool Presentation)},
+	booktitle = {{SAT}},
+	series    = {Lecture Notes in Computer Science},
+	volume    = {7317},
+	pages     = {430--435},
+	publisher = {Springer},
+	year      = {2012}
+}
+
+@inproceedings{BalabanovJ11,
+	author    = {Valeriy Balabanov and
+	Jie{-}Hong R. Jiang},
+	title     = {Resolution Proofs and Skolem Functions in {QBF} Evaluation and Applications},
+	booktitle = {{CAV}},
+	series    = {Lecture Notes in Computer Science},
+	volume    = {6806},
+	pages     = {149--164},
+	publisher = {Springer},
+	year      = {2011}
+}
+
+@article{LonsingB10,
+	author    = {Florian Lonsing and
+	Armin Biere},
+	title     = {DepQBF: {A} Dependency-Aware {QBF} Solver},
+	journal   = {J. Satisf. Boolean Model. Comput.},
+	volume    = {7},
+	number    = {2-3},
+	pages     = {71--76},
+	year      = {2010}
+}
+
+@inproceedings{HeuleSB14a,
+	author    = {Marijn Heule and
+	Martina Seidl and
+	Armin Biere},
+	title     = {A Unified Proof System for {QBF} Preprocessing},
+	booktitle = {{IJCAR}},
+	series    = {Lecture Notes in Computer Science},
+	volume    = {8562},
+	pages     = {91--106},
+	publisher = {Springer},
+	year      = {2014}
+}
+
+@inproceedings{Biere2011,
+	title={Blocked clause elimination for QBF},
+	author={Biere, Armin and Lonsing, Florian and Seidl, Martina},
+	booktitle={International Conference on Automated Deduction},
+	pages={101--115},
+	year={2011},
+	organization={Springer}
+}
+
+@inproceedings{JanotaGM13,
+	author    = {Mikol{\'{a}}s Janota and
+	Radu Grigore and
+	Jo{\~{a}}o Marques{-}Silva},
+	title     = {On {QBF} Proofs and Preprocessing},
+	booktitle = {{LPAR}},
+	series    = {Lecture Notes in Computer Science},
+	volume    = {8312},
+	pages     = {473--489},
+	publisher = {Springer},
+	year      = {2013}
+}
+
+@article{BlanchetteFLW18,
+	author    = {Jasmin Christian Blanchette and
+	Mathias Fleury and
+	Peter Lammich and
+	Christoph Weidenbach},
+	title     = {A Verified {SAT} Solver Framework with Learn, Forget, Restart, and
+	Incrementality},
+	journal   = {J. Autom. Reason.},
+	volume    = {61},
+	number    = {1-4},
+	pages     = {333--365},
+	year      = {2018}
+}
+
+@inproceedings{HeuleSB14,
+	author    = {Marijn Heule and
+	Martina Seidl and
+	Armin Biere},
+	title     = {Efficient extraction of Skolem functions from {QRAT} proofs},
+	booktitle = {Formal Methods in Computer-Aided Design, {FMCAD} 2014, Lausanne, Switzerland,
+	October 21-24, 2014},
+	pages     = {107--114},
+	publisher = {{IEEE}},
+	year      = {2014},
+	url       = {https://doi.org/10.1109/FMCAD.2014.6987602},
+	doi       = {10.1109/FMCAD.2014.6987602},
+	timestamp = {Wed, 16 Oct 2019 14:14:56 +0200},
+	biburl    = {https://dblp.org/rec/conf/fmcad/HeuleSB14.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{HeuleSB17,
+	author    = {Marijn J. H. Heule and
+	Martina Seidl and
+	Armin Biere},
+	title     = {Solution Validation and Extraction for {QBF} Preprocessing},
+	journal   = {J. Autom. Reason.},
+	volume    = {58},
+	number    = {1},
+	pages     = {97--125},
+	year      = {2017},
+	url       = {https://doi.org/10.1007/s10817-016-9390-4},
+	doi       = {10.1007/s10817-016-9390-4},
+	timestamp = {Wed, 02 Sep 2020 13:29:38 +0200},
+	biburl    = {https://dblp.org/rec/journals/jar/HeuleSB17.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{JussilaBSKW07,
+	author    = {Toni Jussila and
+	Armin Biere and
+	Carsten Sinz and
+	Daniel Kr{\"{o}}ning and
+	Christoph M. Wintersteiger},
+	title     = {A First Step Towards a Unified Proof Checker for {QBF}},
+	booktitle = {{SAT}},
+	series    = {Lecture Notes in Computer Science},
+	volume    = {4501},
+	pages     = {201--214},
+	publisher = {Springer},
+	year      = {2007}
+}
+
+@article{HeuleSB17,
+	author    = {Marijn J. H. Heule and
+	Martina Seidl and
+	Armin Biere},
+	title     = {Solution Validation and Extraction for {QBF} Preprocessing},
+	journal   = {J. Autom. Reason.},
+	volume    = {58},
+	number    = {1},
+	pages     = {97--125},
+	year      = {2017}
+}
+
+@inproceedings{FazekasHSB17,
+	author    = {Katalin Fazekas and
+	Marijn J. H. Heule and
+	Martina Seidl and
+	Armin Biere},
+	editor    = {Sebastian Gabmeyer and
+	Einar Broch Johnsen},
+	title     = {Skolem Function Continuation for Quantified Boolean Formulas},
+	booktitle = {Tests and Proofs - 11th International Conference, TAP@STAF 2017, Marburg,
+	Germany, July 19-20, 2017, Proceedings},
+	series    = {Lecture Notes in Computer Science},
+	volume    = {10375},
+	pages     = {129--138},
+	publisher = {Springer},
+	year      = {2017},
+	url       = {https://doi.org/10.1007/978-3-319-61467-0\_8},
+	doi       = {10.1007/978-3-319-61467-0\_8},
+	timestamp = {Sun, 25 Oct 2020 22:36:53 +0100},
+	biburl    = {https://dblp.org/rec/conf/tap/FazekasHSB17.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{GoultiaevaGB11,
+	author    = {Alexandra Goultiaeva and
+	Allen Van Gelder and
+	Fahiem Bacchus},
+	title     = {A Uniform Approach for Generating Proofs and Strategies for Both True
+	and False {QBF} Formulas},
+	booktitle = {{IJCAI}},
+	pages     = {546--553},
+	publisher = {{IJCAI/AAAI}},
+	year      = {2011}
+}
+
+@inproceedings{AnsoteguiGS05,
+	author    = {Carlos Ans{\'{o}}tegui and
+	Carla P. Gomes and
+	Bart Selman},
+	title     = {The Achilles' Heel of {QBF}},
+	booktitle = {{AAAI}},
+	pages     = {275--281},
+	publisher = {{AAAI} Press / The {MIT} Press},
+	year      = {2005}
+}
+
+@inproceedings{DershowitzHK05,
+	author    = {Nachum Dershowitz and
+	Ziyad Hanna and
+	Jacob Katz},
+	title     = {Bounded Model Checking with {QBF}},
+	booktitle = {{SAT}},
+	series    = {Lecture Notes in Computer Science},
+	volume    = {3569},
+	pages     = {408--414},
+	publisher = {Springer},
+	year      = {2005}
+}
+
+@inproceedings{Van2013,
+	title={Certificate extraction from variable-elimination QBF preprocessors},
+	author={Van Gelder, Allen},
+	booktitle={Proc. of the 1st Int. Workshop on Quantified Boolean Formulas (QBF 2013)},
+	pages={35--39},
+	year={2013}
+}
